--- a/package.json
+++ b/package.json
@@ -43,30 +43,29 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.8",
-    "uuid": "^11.1.0",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jose": "latest",
+    "lucide-react": "^0.503.0",
+    "next": "15.3.1",
     "next-themes": "^0.4.4",
-    
+    "nextjs-toploader": "^3.8.16",
+    "prisma": "latest",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "sonner": "^1.7.1",
-    "tailwindcss-animate": "^1.0.7",
-    
-    "zod": "^3.24.1",
-    "prisma": "latest",
     "redux": "latest",
-    "jose": "latest"
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.8",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
